Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-29223

QtQuick 2.0 view crash after Windows security dialog (Ctrl+Alt+Del)

XMLWordPrintable

      I press Ctrl+Alt+Del -> Windows security dialog -> Cancel (go back) -> QtQuick 2.0 view become transparent.

      OpenGL errors:
      bool __thiscall QWindowsEGLContext::makeCurrent(class QPlatformSurface *): eglMakeCurrent() failed, eglError: 0x300e, this: 0x134e5d8

      QEGLPlatformContext::swapBuffers(): eglError: 12302, this: 0x134e5d8

      Number of leaked pixmaps: 7
      QObject::killTimers: timers cannot be stopped from another thread

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            qtcomsupport Qt Support
            guapman Konstantin Alexeev
            Votes:
            8 Vote for this issue
            Watchers:
            20 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes