QTBUG-29223 workaround

Hide/show QQuickWindow when EGL_CONTEXT_LOST occurs when Windows XP
security screen is triggered.

Change-Id: Ia579783565befcfe201fdf4e4b8263e2e306b567